--- a/themes/meghna-hugo/layouts/partials/footer.html
+++ b/themes/meghna-hugo/layouts/partials/footer.html
@@ -16,7 +16,7 @@
 				{{"<!-- copyright -->" | safeHTML}}
 				<div class="copyright text-center">
 					<a href="{{ .Site.BaseURL | absURL }}">
-						<img src="{{ .Site.Params.logo | absURL }}" alt="Meghna" /> 
+						<img src="{{ .Site.Params.logo | absURL }}" alt="Meghna" width="42" height="42" />
 					</a>
 					<br>
 
