--- a/themes/meghna-hugo/layouts/partials/hero-area.html
+++ b/themes/meghna-hugo/layouts/partials/hero-area.html
@@ -6,6 +6,7 @@
            {{with .Site.Params.banner.icon}} <i class="{{ . }}"></i> {{ end }}
         </div>
        {{with .Site.Params.banner.heading}} <h1>{{ . }}</h1>{{ end }}
+       {{with .Site.Params.banner.subheading}} <h2>{{ . }}</h2>{{ end }}
        {{with .Site.Params.banner.content}} <p>{{ . }}</p> {{ end }}
        {{ if .Site.Params.banner.btn}}
         <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent">{{ .Site.Params.banner.btnText}}</a>
